# gchemol

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  units.rs
tests/: alignment.rs  crystal.rs  geometry.rs  inertia.rs  io.rs  molecule.rs  rings.rs  selection.rs
tests/files/cif/: multi.cif
tests/files/gaussian/: multi.gjf
tests/files/mol2/: Ni211.mol2  rings.mol2
tests/files/templates/: xyz.tera
tests/files/xyz/: H2O.xyz
