[package]
name = "gchemol"
version = "0.0.42"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "gchemol: a Graph-based CHEMical Objects Library"
homepage = "https://github.com/gchemol/gchemol"
repository = "https://github.com/gchemol/gchemol"
license = "MIT OR Apache-2.0"
exclude = ["bin/*", "docs/*", "ltxpng/*", "data/*"]
readme = "README.md"

[dependencies]
gchemol-core = "0.0.42"
gchemol-readwrite = "0.0.42"
gchemol-geometry = "0.0.40"
gchemol-gut = "0.1.3"

[dev-dependencies]
tempfile = "3"
vecfx = "0.1.2"

[features]
adhoc = ["gchemol-core/adhoc", "gchemol-geometry/adhoc", "gchemol-readwrite/adhoc"] # for adhoc hacking
